--- a/web/index.html
+++ b/web/index.html
@@ -7,12 +7,14 @@
 
 	<title></title>
 
-	<link rel="stylesheet" href="assets/styles/main.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-
-	<script src="assets/scripts/main.js"></script>
+	<h1>
+		TMPASS viewer
+	</h1>
+	<script src="index.ts"></script>
 
 </body>
 </html>
