--- a/web/index.html
+++ b/web/index.html
@@ -11,21 +11,37 @@
 
 </head>
 <body>
+	<div id="app-wrapper">
 	<header>
-		<h1>Podané ruce, heslo pro klientské počítače</h1>
+		<h1>Heslo pro klientské počítače se systémem Linux</h1>
+		<span class="sub-header">Podané ruce, kontaktní středisko Brno, Vlhká</span>
 	</header>
-	<div class="current-password-card">
-		<span class="current-password-header">Současné heslo</span>
-		<span id="current-password"></span>
-		<div class="">
-			<div class="proportional-time-display">circle here</div>
+	<div class="current-password-card password-card">
+		<div class="text-wrapper">
+			<span id="current-password" class="password"></span>
+		</div>
+		<div class="proportional-time-display">
+			<svg width="100%" height="100%" viewBox="0 0 40 40" class="donut">
+				<circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#fff"></circle>
+				<circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
+				<circle id="ticker" class="donut-segment donut-segment-2" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="4" stroke-dashoffset="25"></circle>
+				<g class="donut-text donut-text-1">
+					<text y="48%" transform="translate(0, 2)">
+						<tspan x="50%" id="minutes-text" text-anchor="middle" class="donut-percent"></tspan>
+					</text>
+					<text y="62%" transform="translate(0, 2)">
+						<tspan x="50%" text-anchor="middle" class="donut-data">minut</tspan>
+					</text>
+				</g>
+			</svg>
 		</div>
 	</div>
-	<div class="future-password-card">
-		<span class="future-password-header">Současné heslo</span>
-		<span id="future-password"></span>
+	<div class="future-password-card password-card">
+		<span id="future-password" class="password"></span>
+		<span class="valid-period">Platnost: <span class="valid-from">14.00</span>⟶<span class="valid-to">15.00</span></span>
 	</div>
 
 	<script src="index.js"></script>
+	</div>
 </body>
 </html>
